runtime: ensure host runner runs on the host system

When running with the "host" runtime from a flatpak release of Builder, we
were running the application inside the flatpak runtime.

This does the same thing we do for the launcher, and ensures that the
program is instead launched on the host.

https://bugzilla.gnome.org/show_bug.cgi?id=790198